refactoring APIs to prepare for changes required by Jigsaw Modular System (JDK-8047774), part 2